# nipype1-workflows

./: .travis.yml  README.md
package/: setup.cfg
package/niflow/nipype1/workflows/: __init__.py  cli.py  workflow.py
package/niflow/nipype1/workflows/dmri/camino/: connectivity_mapping.py  diffusion.py  group_connectivity.py
package/niflow/nipype1/workflows/dmri/connectivity/: group_connectivity.py  nx.py
package/niflow/nipype1/workflows/dmri/dipy/: denoise.py
package/niflow/nipype1/workflows/dmri/dtitk/: tensor_registration.py
package/niflow/nipype1/workflows/dmri/fsl/: artifacts.py  dti.py  epi.py  tbss.py  utils.py
package/niflow/nipype1/workflows/dmri/mrtrix/: connectivity_mapping.py  diffusion.py  group_connectivity.py
package/niflow/nipype1/workflows/fmri/fsl/: __init__.py  estimate.py  preprocess.py
package/niflow/nipype1/workflows/fmri/spm/: preprocess.py
package/niflow/nipype1/workflows/misc/: utils.py
package/niflow/nipype1/workflows/rsfmri/fsl/: resting.py
package/niflow/nipype1/workflows/rsfmri/fsl/tests/: test_resting.py
package/niflow/nipype1/workflows/smri/ants/: ANTSBuildTemplate.py  antsRegistrationBuildTemplate.py
package/niflow/nipype1/workflows/smri/freesurfer/: autorecon1.py  autorecon2.py  autorecon3.py  ba_maps.py  bem.py  recon.py  utils.py
package/niflow/nipype1/workflows/smri/niftyreg/: groupwise.py
