[metadata]
name = niflow-nipype1-workflows
version = attr: niflow.nipype1.workflows.__version__
url = https://github.com/niflows/niflow-nipype1-workflows
author = nipype developers
author_email = neuroimaging@python.org
maintainer = nipype developers
maintainer_email = neuroimaging@python.org
description = niflow-nipype1-workflows workflow package
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License, 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
# Place any Python dependencies here
install_requires =
    nipype
    future >=0.16.0
    Click
# Uncomment the following line to include files specified in MANIFEST.in
# include_package_data = True

[options.entry_points]
console_scripts =
    niflow-nipype1-workflows = niflow.nipype1.workflows.cli:main

## If your workflow requires data to run, uncomment and update the following section:
[options.package_data]
niflow.nipype1.workflows =
    data/*.sch
